# find_stones_solution

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  CTestTestfile.cmake  Makefile  QUESTION.md  README.md  README_zh-CN.md  cmake_install.cmake  index.html  results.html  results.xml  unit_test
.github/workflows/: unit_tests.yml
lib/: CMakeLists.txt  solution.cpp  solution.hpp
python/: solution.py
src/: main.cpp
test/: CMakeLists.txt  test.cpp
